add mysql microservice

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon api/index.js"
+    "dev": "nodemon api/index.js",
+    "database":"nodemon mysql/index.js"
   },
   "keywords": [],
   "author": "",
